--- a/Pixiv_Wallpaper_for_Windows_10/String/en-US/Resources.resw
+++ b/Pixiv_Wallpaper_for_Windows_10/String/en-US/Resources.resw
@@ -273,7 +273,10 @@
   <data name="RefreshExplanation" xml:space="preserve">
     <value>This update only refresh the illustration ID queue in memory. You need to click the "Next illustration" button to check the new illustration in the preview page</value>
   </data>
-  <data name="ReviewTimes" xml:space="preserve">
+  <data name="Resolution.Text" xml:space="preserve">
+    <value> Pixel</value>
+  </data>
+  <data name="ReviewTimes.Text" xml:space="preserve">
     <value> times review</value>
   </data>
   <data name="Setting.Text" xml:space="preserve">
