--- a/Pixiv_Wallpaper_for_Windows_10/MultilingualResources/Pixiv_Wallpaper_for_Windows_10.zh-Hans.xlf
+++ b/Pixiv_Wallpaper_for_Windows_10/MultilingualResources/Pixiv_Wallpaper_for_Windows_10.zh-Hans.xlf
@@ -8,207 +8,207 @@
       <group id="PIXIV_WALLPAPER_FOR_WINDOWS_10/STRING/EN-US/RESOURCES.RESW" datatype="resx">
         <trans-unit id="120Mins" translate="yes" xml:space="preserve">
           <source>120 Minutes</source>
-          <target state="final">120 分钟</target>
+          <target state="translated">120 分钟</target>
         </trans-unit>
         <trans-unit id="15Mins" translate="yes" xml:space="preserve">
           <source>15 Minutes</source>
-          <target state="final">15 分钟</target>
+          <target state="translated">15 分钟</target>
         </trans-unit>
         <trans-unit id="180Mins" translate="yes" xml:space="preserve">
           <source>180 Minutes</source>
-          <target state="final">180 分钟</target>
+          <target state="translated">180 分钟</target>
         </trans-unit>
         <trans-unit id="30Mins" translate="yes" xml:space="preserve">
           <source>30 Minutes</source>
-          <target state="final">30 分钟</target>
+          <target state="translated">30 分钟</target>
         </trans-unit>
         <trans-unit id="60Mins" translate="yes" xml:space="preserve">
           <source>60 Minutes</source>
-          <target state="final">60 分钟</target>
+          <target state="translated">60 分钟</target>
         </trans-unit>
         <trans-unit id="Account.Text" translate="yes" xml:space="preserve">
           <source>Account:</source>
-          <target state="final">帐户:</target>
+          <target state="translated">帐户:</target>
         </trans-unit>
         <trans-unit id="BackgroundMode.Text" translate="yes" xml:space="preserve">
           <source>Background Mode</source>
-          <target state="final">后台模式</target>
+          <target state="translated">后台模式</target>
         </trans-unit>
         <trans-unit id="BackgroundModeExplanation.Text" translate="yes" xml:space="preserve">
           <source>The Backgound Task Mode can maximize power save if your network speed is fast enough to download an illustration within 30s, or the application will be closed.</source>
-          <target state="final">后台任务模式可以最大限度地节省电源(如有必要)，但由于系统限制，每一次后台的插画下载任务只能存活30秒。为了应用的稳定，请尽量使用扩展会话模式</target>
+          <target state="translated">后台任务模式可以最大限度地节省电源(如有必要)，但由于系统限制，每一次后台的插画下载任务只能存活30秒。为了应用的稳定，请尽量使用扩展会话模式</target>
         </trans-unit>
         <trans-unit id="BackgroundTask" translate="yes" xml:space="preserve">
           <source>BackgroundTask</source>
-          <target state="final">后台任务</target>
+          <target state="translated">后台任务</target>
         </trans-unit>
         <trans-unit id="BackgroundTaskDenied" translate="yes" xml:space="preserve">
           <source>Application cannot register background task</source>
-          <target state="final">应用无法注册后台任务</target>
+          <target state="translated">应用无法注册后台任务</target>
         </trans-unit>
         <trans-unit id="BackgroundTaskDeniedExplanation" translate="yes" xml:space="preserve">
           <source>If you want to make this app active in the background with background task, try to change the power settings or plugging in wall power</source>
-          <target state="final">如果你希望应用能以后台任务的形式在后台保持活动，请更改电源设定或插入外部电源</target>
+          <target state="translated">如果你希望应用能以后台任务的形式在后台保持活动，请更改电源设定或插入外部电源</target>
         </trans-unit>
         <trans-unit id="BatterySetting" translate="yes" xml:space="preserve">
           <source>BatterySetting</source>
-          <target state="final">电池设定</target>
+          <target state="translated">电池设定</target>
         </trans-unit>
         <trans-unit id="ClearCookies.Content" translate="yes" xml:space="preserve">
           <source>Clear cookies</source>
-          <target state="final">清除Cookie</target>
+          <target state="translated">清除Cookie</target>
         </trans-unit>
         <trans-unit id="ClearIllustrations.Content" translate="yes" xml:space="preserve">
           <source>Clear illustrations</source>
-          <target state="final">清除插画</target>
+          <target state="translated">清除插画</target>
         </trans-unit>
         <trans-unit id="ConnectionFail" translate="yes" xml:space="preserve">
           <source>Could not connect to the illustration download server</source>
-          <target state="final">pixiv插画服务器连接失败</target>
+          <target state="translated">pixiv插画服务器连接失败</target>
         </trans-unit>
         <trans-unit id="ConnectionFailExplanation" translate="yes" xml:space="preserve">
           <source>The connection timed out when trying to download illustrations from pixiv. Please check the network connection</source>
-          <target state="final">连接到pixiv插画服务器超时，请检查网络连接</target>
+          <target state="translated">连接到pixiv插画服务器超时，请检查网络连接</target>
         </trans-unit>
         <trans-unit id="ConnectionLost" translate="yes" xml:space="preserve">
           <source>Connection lost while downloading illustration</source>
-          <target state="final">服务器连接中断</target>
+          <target state="translated">服务器连接中断</target>
         </trans-unit>
         <trans-unit id="ConnectionLostExplanation" translate="yes" xml:space="preserve">
           <source>The connection was interrupted while downloading illustrations from pixiv. Please check the network connection</source>
-          <target state="final">从pixiv服务器下载插画时连接中断，请检查网络连接</target>
+          <target state="translated">从pixiv服务器下载插画时连接中断，请检查网络连接</target>
         </trans-unit>
         <trans-unit id="DataRequestFail" translate="yes" xml:space="preserve">
           <source>Data request failed</source>
-          <target state="final">数据请求失败</target>
+          <target state="translated">数据请求失败</target>
         </trans-unit>
         <trans-unit id="DataRequestFailExplanation" translate="yes" xml:space="preserve">
           <source>Please confirm you have logged or clear the cookies and login again</source>
-          <target state="final">请确认你的登录状态或尝试清理cookie再次登录</target>
+          <target state="translated">请确认你的登录状态或尝试清理cookie再次登录</target>
         </trans-unit>
         <trans-unit id="ExtendedExecutionDenied" translate="yes" xml:space="preserve">
           <source>Application extended execution has been denied</source>
-          <target state="final">应用扩展会话被禁止</target>
+          <target state="translated">应用扩展会话被禁止</target>
         </trans-unit>
         <trans-unit id="ExtendedExecutionDeniedExplanation" translate="yes" xml:space="preserve">
           <source>Due to system limitations, the application cannot continue activities in the background. Please try to change the power settings so that the app can work in background</source>
-          <target state="final">由于系统限制，应用无法继续在后台活动。若希望应用能在后台运行，请尝试更改电源设置</target>
+          <target state="translated">由于系统限制，应用无法继续在后台活动。若希望应用能在后台运行，请尝试更改电源设置</target>
         </trans-unit>
         <trans-unit id="ExtendedSession" translate="yes" xml:space="preserve">
           <source>ExtendedSession</source>
-          <target state="final">扩展会话</target>
+          <target state="translated">扩展会话</target>
         </trans-unit>
         <trans-unit id="FailToChangeLock" translate="yes" xml:space="preserve">
           <source>Failed to change lock screen</source>
-          <target state="final">更换锁屏失败</target>
+          <target state="translated">更换锁屏失败</target>
         </trans-unit>
         <trans-unit id="FailToChangeWallpaper" translate="yes" xml:space="preserve">
           <source>Failed to change wallpaper</source>
-          <target state="final">更换壁纸失败</target>
+          <target state="translated">更换壁纸失败</target>
         </trans-unit>
         <trans-unit id="FailToGetQueue" translate="yes" xml:space="preserve">
           <source>Failed to get pixiv recommendation queue</source>
-          <target state="final">获取pixiv推荐队列失败</target>
+          <target state="translated">获取pixiv推荐队列失败</target>
         </trans-unit>
         <trans-unit id="FailToGetQueueExplanation" translate="yes" xml:space="preserve">
           <source>Please check your network connection and enter the correct account and password</source>
-          <target state="final">请检查你的网络连接并输入正确的账号密码</target>
+          <target state="translated">请检查你的网络连接并输入正确的账号密码</target>
         </trans-unit>
         <trans-unit id="FailToGetQueueExplanationV1" translate="yes" xml:space="preserve">
           <source>Please check your network connection and the login status or try to login again to update expired cookies</source>
-          <target state="final">请检查你的网络连接以及登陆状态，或尝试再次登录以清除过期的cookies</target>
+          <target state="translated">请检查你的网络连接以及登陆状态，或尝试再次登录以清除过期的cookies</target>
         </trans-unit>
         <trans-unit id="FailToGetTop50Queue" translate="yes" xml:space="preserve">
           <source>Fail to get pixiv daily top50 queue</source>
-          <target state="final">获取pixiv每日top50队列失败</target>
+          <target state="translated">获取pixiv每日top50队列失败</target>
         </trans-unit>
         <trans-unit id="Illustrator" translate="yes" xml:space="preserve">
           <source>Illustrator: </source>
-          <target state="final">画师: </target>
+          <target state="translated">画师: </target>
         </trans-unit>
         <trans-unit id="LocalData.Text" translate="yes" xml:space="preserve">
           <source>Local data</source>
-          <target state="final">本地数据</target>
+          <target state="translated">本地数据</target>
         </trans-unit>
         <trans-unit id="LocalDataSize.Text" translate="yes" xml:space="preserve">
           <source>Local illustrations total size:</source>
-          <target state="final">本地插画缓存:</target>
+          <target state="translated">本地插画缓存:</target>
         </trans-unit>
         <trans-unit id="Next.Text" translate="yes" xml:space="preserve">
           <source>Next illustration</source>
-          <target state="final">下一张插画</target>
+          <target state="translated">下一张插画</target>
         </trans-unit>
         <trans-unit id="NotSupport" translate="yes" xml:space="preserve">
           <source>Your device does not support automatic wallpaper replacement</source>
-          <target state="final">你的设备不支持自动更换壁纸</target>
+          <target state="translated">你的设备不支持自动更换壁纸</target>
         </trans-unit>
         <trans-unit id="Other.Text" translate="yes" xml:space="preserve">
           <source>Other options</source>
-          <target state="final">其他选项</target>
+          <target state="translated">其他选项</target>
         </trans-unit>
         <trans-unit id="OtherOptionsExplanation.Text" translate="yes" xml:space="preserve">
           <source>Change lock screen at the same time</source>
-          <target state="final">同时更换锁屏</target>
+          <target state="translated">同时更换锁屏</target>
         </trans-unit>
         <trans-unit id="Password.Text" translate="yes" xml:space="preserve">
           <source>Password:</source>
-          <target state="final">密码:</target>
+          <target state="translated">密码:</target>
         </trans-unit>
         <trans-unit id="PixivLoginV1.Text" translate="yes" xml:space="preserve">
           <source>Pixiv Login ver1(WebView)</source>
-          <target state="final">登录Pixiv(WebView)</target>
+          <target state="translated">登录Pixiv(WebView)</target>
         </trans-unit>
         <trans-unit id="PixivLoginV1Explanation.Text" translate="yes" xml:space="preserve">
           <source>Click the button to login</source>
-          <target state="final">点击按钮进入pixiv登录页</target>
+          <target state="translated">点击按钮进入pixiv登录页</target>
         </trans-unit>
         <trans-unit id="PixivLoginV1LoggedIn" translate="yes" xml:space="preserve">
           <source>Logged in</source>
-          <target state="final">已登录</target>
+          <target state="translated">已登录</target>
         </trans-unit>
         <trans-unit id="PixivLoginV1Not" translate="yes" xml:space="preserve">
           <source>Please login</source>
-          <target state="final">请登录</target>
+          <target state="translated">请登录</target>
         </trans-unit>
         <trans-unit id="PixivLoginV2.Text" translate="yes" xml:space="preserve">
           <source>Pixiv Login ver2(PixivCS)</source>
-          <target state="final">登录Pixiv(PixivCS)</target>
+          <target state="translated">登录Pixiv(PixivCS)</target>
         </trans-unit>
         <trans-unit id="PixivLoginV2Explanation.Text" translate="yes" xml:space="preserve">
           <source>The app will automatically store your account and password locally</source>
-          <target state="final">应用会自动将你的账号密码存储在本地</target>
+          <target state="translated">应用会自动将你的账号密码存储在本地</target>
         </trans-unit>
         <trans-unit id="PleaseCheckNetwork" translate="yes" xml:space="preserve">
           <source>Please check your network connection</source>
-          <target state="final">请检查您的网络连接</target>
+          <target state="translated">请检查您的网络连接</target>
         </trans-unit>
         <trans-unit id="Preview.Text" translate="yes" xml:space="preserve">
           <source>Preview</source>
-          <target state="final">预览</target>
+          <target state="translated">预览</target>
         </trans-unit>
         <trans-unit id="RecommendedV1Refresh" translate="yes" xml:space="preserve">
           <source>Recommended ver 1 illustration queue has been updated</source>
-          <target state="final">pixiv推荐ver1插画队列已更新</target>
+          <target state="translated">pixiv推荐ver1插画队列已更新</target>
         </trans-unit>
         <trans-unit id="RecommendedV2Refresh" translate="yes" xml:space="preserve">
           <source>Recommended ver 2 illustration queue has been updated</source>
-          <target state="final">pixiv推荐ver2插画队列已更新</target>
+          <target state="translated">pixiv推荐ver2插画队列已更新</target>
         </trans-unit>
         <trans-unit id="RecommendV1.Content" translate="yes" xml:space="preserve">
           <source>Recommendation ver1 with WebAPI</source>
-          <target state="final">pixiv推荐ver1 WebAPI</target>
+          <target state="translated">pixiv推荐ver1 WebAPI</target>
         </trans-unit>
         <trans-unit id="RecommendV2.Content" translate="yes" xml:space="preserve">
           <source>Recommendation ver2 with PixivCS API</source>
-          <target state="final">pixiv推荐ver2 PixivCS</target>
+          <target state="translated">pixiv推荐ver2 PixivCS</target>
         </trans-unit>
         <trans-unit id="Refresh.Text" translate="yes" xml:space="preserve">
           <source>Refresh illustrations list</source>
-          <target state="final">更新插画队列</target>
+          <target state="translated">更新插画队列</target>
         </trans-unit>
         <trans-unit id="RefreshExplanation" translate="yes" xml:space="preserve">
           <source>This update only refresh the illustration ID queue in memory. You need to click the "Next illustration" button to check the new illustration in the preview page</source>
-          <target state="final">此更新仅仅是更新内存中的插画ID队列，你需要点击"下一张插画"在"预览"中查看新的插画</target>
+          <target state="translated">此更新仅仅是更新内存中的插画ID队列，你需要点击"下一张插画"在"预览"中查看新的插画</target>
         </trans-unit>
         <trans-unit id="ReviewTimes.Text" translate="yes" xml:space="preserve">
           <source> times review</source>
@@ -217,59 +217,63 @@
         </trans-unit>
         <trans-unit id="Setting.Text" translate="yes" xml:space="preserve">
           <source>Setting</source>
-          <target state="final">设置</target>
+          <target state="translated">设置</target>
         </trans-unit>
         <trans-unit id="SetWallpaper.Text" translate="yes" xml:space="preserve">
           <source>Set as wallpaper</source>
-          <target state="final">设为壁纸</target>
+          <target state="translated">设为壁纸</target>
         </trans-unit>
         <trans-unit id="Success" translate="yes" xml:space="preserve">
           <source>Change wallpaper successfully</source>
-          <target state="final">成功更换壁纸</target>
+          <target state="translated">成功更换壁纸</target>
         </trans-unit>
         <trans-unit id="Top50.Content" translate="yes" xml:space="preserve">
           <source>Daily Top50</source>
-          <target state="final">每日Top50</target>
+          <target state="translated">每日Top50</target>
         </trans-unit>
         <trans-unit id="Top50Refresh" translate="yes" xml:space="preserve">
           <source>Top50 illustration queue has been updated</source>
-          <target state="final">Top50插画队列已更新</target>
+          <target state="translated">Top50插画队列已更新</target>
         </trans-unit>
         <trans-unit id="UnknownError" translate="yes" xml:space="preserve">
           <source>An unknown error occurred while downloading the illustration</source>
-          <target state="final">在下载插画时发生了未知错误</target>
+          <target state="translated">在下载插画时发生了未知错误</target>
         </trans-unit>
         <trans-unit id="UpdateInterval.Text" translate="yes" xml:space="preserve">
           <source>Update interval</source>
-          <target state="final">更新时间间隔</target>
+          <target state="translated">更新时间间隔</target>
         </trans-unit>
         <trans-unit id="UpdateIntervalExplanation.Text" translate="yes" xml:space="preserve">
           <source>Set the time interval for updating Wallpapers</source>
-          <target state="final">设置壁纸的更新时间间隔</target>
+          <target state="translated">设置壁纸的更新时间间隔</target>
         </trans-unit>
         <trans-unit id="UpdateMode.Text" translate="yes" xml:space="preserve">
           <source>Update Mode</source>
-          <target state="final">更新模式</target>
+          <target state="translated">更新模式</target>
         </trans-unit>
         <trans-unit id="UpdateModeExplanation.Text" translate="yes" xml:space="preserve">
           <source>Select the illustrations update mode."Recommendation" mode will select the illustrations with appropriate aspect ratio</source>
-          <target state="final">选择插画更新的模式，"pixiv推荐"模式会自动筛选出长宽比合适的插画</target>
-        </trans-unit>
-        <trans-unit id="Visit.Text" translate="yes" xml:space="preserve">
-          <source>Visit illustration page</source>
-          <target state="final">在pixiv上浏览该插画</target>
+          <target state="translated">选择插画更新的模式，"pixiv推荐"模式会自动筛选出长宽比合适的插画</target>
         </trans-unit>
         <trans-unit id="VisitLocalFolder.Content" translate="yes" xml:space="preserve">
           <source>Visit local folder</source>
-          <target state="final">浏览本地文件夹</target>
+          <target state="translated">浏览本地文件夹</target>
         </trans-unit>
         <trans-unit id="LoadingStatus.Text" translate="yes" xml:space="preserve">
           <source>Loading Illustration... </source>
-          <target state="final">插画加载中...</target>
+          <target state="translated">插画加载中...</target>
         </trans-unit>
         <trans-unit id="Resolution.Text" translate="yes" xml:space="preserve">
           <source> Pixel</source>
-          <target state="final"> 像素</target>
+          <target state="translated"> 像素</target>
+        </trans-unit>
+        <trans-unit id="Share.Text" translate="yes" xml:space="preserve">
+          <source>Share the illustration</source>
+          <target state="translated">分享插画</target>
+        </trans-unit>
+        <trans-unit id="CopyLink" translate="yes" xml:space="preserve">
+          <source>The link has been copied to the clipboard</source>
+          <target state="new">The link has been copied to the clipboard</target>
         </trans-unit>
       </group>
     </body>
