--- a/Pixiv_Wallpaper_for_Windows_10/String/en-US/Resources.resw
+++ b/Pixiv_Wallpaper_for_Windows_10/String/en-US/Resources.resw
@@ -289,7 +289,7 @@
     <value>Set as wallpaper</value>
   </data>
   <data name="Share.Text" xml:space="preserve">
-    <value>Share the illustration</value>
+    <value>Share the illustration link</value>
   </data>
   <data name="Success" xml:space="preserve">
     <value>Change wallpaper successfully</value>
